--- a/views/parts/footer.ejs
+++ b/views/parts/footer.ejs
@@ -56,8 +56,8 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="loading-bar.js"></script>
+		
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
+	</body>
 </html>
