--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -12,7 +12,7 @@
     <div class="full-page mt-4 ">
         <nav class="navbar navbar-light  container" style="background-color: rgb(250, 205, 4)" >
             <div class="container-fluid">
-                <a  class="  h1  p-3 fw-bolder bg-dark" style="color:yellow">Olx</a>
+                <a  class="  h1  p-3 fw-bolder bg-dark" href="#" style="color:yellow;">Olx</a>
               <div class="d-flex">
                 <a href="/" class="nav-link active text-dark fw-bolder fs-6 me-3"  >Home</a>
                 <a class="nav-link active  text-dark fw-bold me-3" href="../about">About</a>
