--- a/views/ads.ejs
+++ b/views/ads.ejs
@@ -35,7 +35,7 @@
           
                       <div class="col-sm-6">
                         <label for="formFile" class="form-label">Image upload</label>
-                        <input class="form-control" type="file" id="formFile"name="img" required />
+                        <input class="form-control" type="file" id="formFile"name="file" required />
                       </div>
                       <div class="col-sm-6">
                         <label for="number" class="form-label">Price</label>
@@ -43,7 +43,7 @@
                       </div>
                       <div class="col-12">
                         <label for="About"minlength="5" class="form-label">Ads about</label>
-                        <textarea class="form-control"name="adsAbout" required />
+                        <textarea class="form-control"name="adsAbout" placeholder="Ads about" required />
 
                         </textarea>
                       </div>
