--- a/views/ads.ejs
+++ b/views/ads.ejs
@@ -10,7 +10,7 @@
                 
                 <div class="col-md-10 col-lg-10 g-3">
                     
-                  <form class="needs-validation row g-3"method="POST" enctype="application/x-www-form-urlencoded" novalidate>
+                  <form class="needs-validation row g-3"method="POST"  enctype="multipart/form-data" novalidate>
                     
                       <div class="col-sm-6">
                         <label for="adsName" class="form-label">Ads name</label>
@@ -56,7 +56,7 @@
           
 
           
-                    <button class="w-100 btn btn-outline-primary btn-lg" type="submit">Get started</button>
+                    <button class="w-100 btn btn-outline-primary btn-lg" type="submit">Send messages</button>
                   </form>
                 </div>
               </div>
