--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <a  class="  h1  p-3 fw-bolder bg-dark" href="/" style="color:yellow;">Olx</a>
               <div class="d-flex">
-                <a href="/" class="nav-link active text-dark fw-bolder fs-6 me-3"  >Home</a>
+                <a href="/index" class="nav-link active text-dark fw-bolder fs-6 me-3"  >Home</a>
                 <a class="nav-link active  text-dark fw-bold me-3" href="../about">About</a>
                 <a class="btn-outline-dark btn me-3" href="../ads">E'lon berish</a>
                 
